setting up a basic static site with grunt and less

--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,4 @@
+@import 'variables.less';
 @import 'preboot.less';
 @import 'reset.less';
 
@@ -9,10 +10,7 @@
  *-----------------------------------------------------------------------------
  *----------------------------------------------------------------------------- */
 
-body {
-	height: 100%;
-	font-size: @base-font-size;
-}
+
 
 
 /*-----------------------------------------------------------------------------
@@ -24,16 +22,6 @@ body {
  *-----------------------------------------------------------------------------
  *----------------------------------------------------------------------------- */
 
-#scroll-wall {
-	min-width: 100%;
-	height: 100%;
-	border: 2px solid;
-
-	section {
-		width: 100%;
-		height: 100%;
-	}
-}
 
 
 
