--- a/less/preboot.less
+++ b/less/preboot.less
@@ -5,28 +5,6 @@
  * Some variables and mixins from Bootstrap (Apache 2 license).
  */
 
-
-//
-// Variables
-// --------------------------------------------------
-
-@base-font-size: 16px;
-@content-container-width: 1000px;
-@content-interior-width: 940px;
-
-// colors
-@main-blue: #3a6ba6;
-@light-blue: #afd9db;
-@medium-blue: #254570;
-@dark-blue: #12233c;
-@main-red: #e32f30;
-@dark-red: #67201c;
-@pale-grey: #aeb0b3;
-@pale-yellow: #fce8ad;
-
-@overlay-bg: #000;
-
-//
 // Mixins: vendor prefixes
 // --------------------------------------------------
 
@@ -64,6 +42,32 @@
   -webkit-box-shadow: @shadow; // iOS <4.3 & Android <4.1
           box-shadow: @shadow;
 }
+// Animations
+
+.animation(@name, @duration, @easing) {
+  -webkit-animation: @name @duration @easing;
+     -moz-animation: @name @duration @easing;
+       -o-animation: @name @duration @easing;
+          animation: @name @duration @easing;
+}
+.animation-fill-mode(@mode) {
+  -webkit-animation-fill-mode: @mode;
+     -moz-animation-fill-mode: @mode;
+       -o-animation-fill-mode: @mode;
+          animation-fill-mode: @mode;
+}
+.animation-delay(@delay) {
+  -webkit-animation-delay: @delay;
+     -moz-animation-delay: @delay;
+       -o-animation-delay: @delay;
+          animation-delay: @delay;
+}
+.animation-iteration-count(@count) {
+  -webkit-animation-iteration-count: @count;
+     -moz-animation-iteration-count: @count;
+       -o-animation-iteration-count: @count;
+          animation-iteration-count: @count;
+}
 
 // Transitions
 .transition(@transition, @transition-duration, @transition-easing) {
@@ -86,12 +90,26 @@
 }
 
 // Transformations
+.transform-origin(@x, @y) {
+  -webkit-transform-origin: @x @y;
+     -moz-transform-origin: @x @y;
+      -ms-transform-origin: @x @y;
+       -o-transform-origin: @x @y;
+          transform-origin: @x @y;
+}
 .rotate(@degrees) {
   -webkit-transform: rotate(@degrees);
      -moz-transform: rotate(@degrees);
       -ms-transform: rotate(@degrees);
        -o-transform: rotate(@degrees);
           transform: rotate(@degrees);
+}
+.rotateX(@deg) {
+  -webkit-transform: rotateX(@deg);
+     -moz-transform: rotateX(@deg);
+      -ms-transform: rotateX(@deg);
+       -o-transform: rotateX(@deg);
+          transform: rotateX(@deg);
 }
 
 .scale(@ratio) {
@@ -121,6 +139,22 @@
      -moz-transform: translate3d(@x, @y, @z);
        -o-transform: translate3d(@x, @y, @z);
           transform: translate3d(@x, @y, @z);
+}
+
+// Appearance
+
+.appearance(@appearance) {
+  -moz-appearance: @appearance;
+  -webkit-appearance: @appearance;
+  appearance: @appearance;
+}
+
+// Text Shadow
+.text-shadow(@x, @y, @blur, @color) {
+  -webkit-text-shadow: @x @y @blur @color;
+     -moz-text-shadow: @x @y @blur @color;
+       -o-text-shadow: @x @y @blur @color;
+          text-shadow: @x @y @blur @color;
 }
 
 // Backface visibility
@@ -281,7 +315,7 @@
 //    that are clearfixed.
 // 2. The use of `table` rather than `block` is only necessary if using
 //    `:before` to contain the top-margins of child elements.
-.clearfix() {
+.clearfix {
   &:before,
   &:after {
     content: " "; // 1
@@ -290,6 +324,14 @@
   &:after {
     clear: both;
   }
+}
+
+.ir {
+  display: block;
+  text-indent: 100%;
+  overflow: hidden;
+  font-size: 0;
+  color: transparent;
 }
 
 // Center-align a block level element
